Ignore pretrained model parameters

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ emoji_embedding/data/hotemoji_description_raw.csv
 *-checkpoint.py
 *-checkpoint.ipynb
 *.pyc
+emoji_embedding/model/vision
+emoji_embedding/data/emojipedia.zip
