Adjust distance measure, improce contrastice learning

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ emoji_embedding/data/hotemoji_description_raw.csv
 *-checkpoint.ipynb
 *.pyc
 emoji_embedding/model/vision_classification
+emoji_embedding/model/vision_semi_siamese
 emoji_embedding/data/emojipedia.zip
