--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+emoji==1.6.3
 gensim==4.1.2
 matplotlib==3.5.1
 numpy==1.22.0
@@ -8,3 +9,4 @@ skimage==0.0
 torch==1.10.1
 torchvision==0.9.0a0
 tqdm==4.50.2
+transformers==4.16.2
