--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy==1.22.0
 pandas==1.4.0
 Pillow==9.0.1
 scikit_image==0.19.1
+sentence_transformers==2.2.0
 skimage==0.0
 torch==1.10.1
 torchvision==0.9.0a0
